--- a/index.html
+++ b/index.html
@@ -2847,40 +2847,65 @@ function mergeImported(entries) {
       }
       browserGoBtn.addEventListener("click",goCurrentBrowserTab);
       browserAddressEl.addEventListener("keydown",(e)=>{if(e.key==="Enter")goCurrentBrowserTab();});
-      function renderBrowserView(url){
-        browserViewEl.innerHTML = "";
 
-        if (!url) {
-          browserViewEl.textContent = "Enter a URL or file:/// path above.";
-          return;
-        }
 
-        if (url.startsWith("file:///")) {
-          renderFileUrl(url);
+async function renderBrowserView(url) {
+  browserViewEl.innerHTML = "";
 
-        } else if (url.startsWith("http://") || url.startsWith("https://")) {
-          const iframe = document.createElement("iframe");
-          iframe.src = url;
-          iframe.style.border = "none";
-          iframe.style.width = "100%";
-          iframe.style.height = "100%";
-          iframe.referrerPolicy = "no-referrer";
-          browserViewEl.appendChild(iframe);
+  if (!url) {
+    browserViewEl.textContent = "Enter a URL or file:/// path above.";
+    return;
+  }
 
-        } else {
-          // NEW: treat anything else as a search query
-          const query = encodeURIComponent(url);
-          const searchUrl = `https://www.bing.com/search?q=${query}`;
+  // ✅ Always allow file:/// paths (local FS)
+  if (url.startsWith("file:///")) {
+    renderFileUrl(url);
+    return;
+  }
 
-          const iframe = document.createElement("iframe");
-          iframe.src = searchUrl;
-          iframe.style.border = "none";
-          iframe.style.width = "100%";
-          iframe.style.height = "100%";
-          iframe.referrerPolicy = "no-referrer";
-          browserViewEl.appendChild(iframe);
-        }
-      }
+  // ✅ Check connectivity using fetch
+  let isOnline = true;
+  try {
+    await fetch("https://example.com", { method: "HEAD", cache: "no-store" });
+  } catch (err) {
+    isOnline = false;
+  }
+
+  // ✅ If offline and URL is NOT file:///, show offline.html
+  if (!isOnline) {
+    const iframe = document.createElement("iframe");
+    iframe.src = "offline.html"; // Your offline page
+    iframe.style.border = "none";
+    iframe.style.width = "100%";
+    iframe.style.height = "100%";
+    browserViewEl.appendChild(iframe);
+    return;
+  }
+
+  // ✅ Normal behavior for http/https
+  if (url.startsWith("http://") || url.startsWith("https://")) {
+    const iframe = document.createElement("iframe");
+    iframe.src = url;
+    iframe.style.border = "none";
+    iframe.style.width = "100%";
+    iframe.style.height = "100%";
+    iframe.referrerPolicy = "no-referrer";
+    browserViewEl.appendChild(iframe);
+    return;
+  }
+
+  // ✅ Treat as search query
+  const query = encodeURIComponent(url);
+  const searchUrl = `https://www.bing.com/search?q=${query}`;
+  const iframe = document.createElement("iframe");
+  iframe.src = searchUrl;
+  iframe.style.border = "none";
+  iframe.style.width = "100%";
+  iframe.style.height = "100%";
+  iframe.referrerPolicy = "no-referrer";
+  browserViewEl.appendChild(iframe);
+}
+
 
       function filePathFromUrl(url){
         const raw=url.replace("file:///","");
